# message_queue

./: CMakeLists.txt  README.md  receiver.cpp  sender.cpp
